去掉协议头以适应LTS

--- a/dd/article.html
+++ b/dd/article.html
@@ -5,7 +5,7 @@
 <title>文章</title>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 <meta name="renderer" content="webkit|ie-stand">
-<link rel="icon" href="http://a.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon">
+<link rel="icon" href="//a.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta name=description content="「调调」每天讲述精致的生活方式，推荐那些真正高品质的好东西，帮你低价买到优质海淘商品。拥有调调，拥有生活。">
 <link rel="stylesheet" type="text/css" href="css/article_test.css">
@@ -24,7 +24,7 @@
       <li class="category f-l"><a href="/s-result.html?q=礼物">礼物</a></li>
             <li class="down-app f-l">
             <i class="header-app-icon"></i>
-            <a href="http://www.diaox2.com" target="_blank">下载APP</a></li>  
+            <a href="//www.diaox2.com" target="_blank">下载APP</a></li>  
             <!-- <wb:share-button addition="simple" type="button"></wb:share-button> -->
         </ul>
         <ul class="login f-r">
@@ -53,11 +53,11 @@
          <a href="javascript:;" class="slidesjs-navigation slidesjs-previous" style="display: none;"></a> 
          <div class="article-banner-container">
             <ul class="banner-list clearfix">
-               <li><img src="http://a.diaox2.com/cms/sites/default/files/20150707/goodthing/g_2.jpg" alt="" width="800" height="462"></li>
-               <li><img src="http://a.diaox2.com/cms/sites/default/files/20150707/goodthing/3_1.jpg" alt="" width="800" height="462"></li>   
-                <li><img src="http://a.diaox2.com/cms/sites/default/files/20150708/goodthing/swip.jpg" alt="" width="800" height="462"></li>
-               <li><img src="http://a.diaox2.com/cms/sites/default/files/20141014/firstpage/coffeefirst.jpg" alt="" width="800" height="462"></li>
-               <li><img src="http://a.diaox2.com/cms/sites/default/files/20141009/firstpage/01.jpg" alt="" width="800" height="462"></li>
+               <li><img src="//a.diaox2.com/cms/sites/default/files/20150707/goodthing/g_2.jpg" alt="" width="800" height="462"></li>
+               <li><img src="//a.diaox2.com/cms/sites/default/files/20150707/goodthing/3_1.jpg" alt="" width="800" height="462"></li>   
+                <li><img src="//a.diaox2.com/cms/sites/default/files/20150708/goodthing/swip.jpg" alt="" width="800" height="462"></li>
+               <li><img src="//a.diaox2.com/cms/sites/default/files/20141014/firstpage/coffeefirst.jpg" alt="" width="800" height="462"></li>
+               <li><img src="//a.diaox2.com/cms/sites/default/files/20141009/firstpage/01.jpg" alt="" width="800" height="462"></li>
             </ul>
           </div>
           <a href="javascript:;" class="slidesjs-navigation slidesjs-next" style="display: none;"></a>
@@ -65,7 +65,7 @@
 
       <div class="author-area">
                 <a href="javascript:;">
-                    <img src="http://c.diaox2.com/cms/diaodiao/people/hwh.jpg" alt="" height="30" width="30">
+                    <img src="//c.diaox2.com/cms/diaodiao/people/hwh.jpg" alt="" height="30" width="30">
                     <span>雪姨</span>
                 </a>
                 <ul class="zs-box">
@@ -90,7 +90,7 @@
                     除了海岛，蜜月还能去哪？蜜月是新婚过后的第一件大事，看着朋友们把主流线路都走了一遍，你会不会开始思考，蜜月旅行还有哪些新花样？避开满眼的海岛、沙滩、比基尼和喧嚣的人群，这些冷门却足够美丽纯粹的蜜月胜地，一定能让你拥有最浪漫的回忆。
                 </p>
                 <div class="article-img">
-                    <img src="http://a.diaox2.com/cms/sites/default/files/20141009/firstpage/01.jpg" alt="" width="596" height="596">
+                    <img src="//a.diaox2.com/cms/sites/default/files/20141009/firstpage/01.jpg" alt="" width="596" height="596">
                 </div>
                 <p class="lift"><em class="em">伊本·卡尔敦</em></p>
                 <p>
@@ -99,10 +99,10 @@
                    马赛马拉国家保护区位于肯尼亚与坦桑尼亚交界地区，动物种类繁多，约有95中哺乳动物和450种鸟类，是世界上最好的野生动物保护区之一。
                 </p>
                 <div class="article-img">
-                    <img src="http://a.diaox2.com/cms/sites/default/files/20141009/firstpage/01.jpg" alt="" width="596" height="596">
+                    <img src="//a.diaox2.com/cms/sites/default/files/20141009/firstpage/01.jpg" alt="" width="596" height="596">
                 </div> 
                 <p>
-                    <img id="pending" src="http://content.image.alimmdn.com/cms/sites/default/files/20160513/goodthing/684f5dc9gw1f1aktqwmmkg20wf0b0n6s.gif" alt="" width="1167" height="396">
+                    <img id="pending" src="//content.image.alimmdn.com/cms/sites/default/files/20160513/goodthing/684f5dc9gw1f1aktqwmmkg20wf0b0n6s.gif" alt="" width="1167" height="396">
                 </p>
                 <p class="lift"><em class="em">左图为梦露佩戴着MIKIMOTO经典款珠链；中图为2007年汤唯出席台湾金马奖颁奖典礼时，佩戴MIKIMOTO珍珠钻石项链；右图为2008年，安吉丽娜·朱莉佩戴MIKIMOTO经典款珍珠耳环亮相2008年纽约电影节</em></p>
                 <h2>
@@ -199,7 +199,7 @@
                     <span class="share-title">分享给好友</span>
                 </a>
             </div>
-            <a target="_blank" href="http://diaox2.com/downloads" class="erweima">
+            <a target="_blank" href="//diaox2.com/downloads" class="erweima">
                 <span>更多精彩<br>下载APP</span>
                 <img src="images/download_96.jpg" alt="扫码下载调调" width="96" height="96">
             </a>
