--- a/dd/category.html
+++ b/dd/category.html
@@ -5,7 +5,7 @@
 <title>分类-调调</title>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 <meta name="renderer" content="webkit|ie-stand">
-<link rel="icon" href="http://a.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon">
+<link rel="icon" href="//a.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon">
 <meta name=description content="「调调」每天讲述精致的生活方式，推荐那些真正高品质的好东西，帮你低价买到优质海淘商品。拥有调调，拥有生活。">
 <link rel="stylesheet" type="text/css" href="css/category.css">
 <script>
@@ -45,7 +45,7 @@ function adjust(img){
       <li class="category f-l"><a href="/s-result.html?q=礼物">礼物</a></li>
       <li class="down-app f-l">
       <i class="header-app-icon"></i>
-      <a target="_blank" href="http://www.diaox2.com">下载APP</a></li>  
+      <a target="_blank" href="//www.diaox2.com">下载APP</a></li>  
     </ul>
       <ul class="login f-r">
       <li class="login-title f-l"><a href="#">登录</a></li>
