--- a/dd/index.html
+++ b/dd/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 <meta name="renderer" content="webkit">
 <link rel="stylesheet" type="text/css" href="css/index.css">
-<link rel="icon" href="http://a.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon">
+<link rel="icon" href="//a.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon">
 <meta name="keywords" content="有调,DIAOX2.COM,品质生活方式,值得买,推荐礼物,海淘折扣,使用经验,评测,测评,旅游攻略,吃喝指南,家具,生活用品,家用电器,办公文具,时尚单品,护理保湿,数码产品,母婴用品,户外装备">
 <meta name="description" content="有调DIAOX2.COM,讲述精致生活,推荐品质好物。找到最值得买的品牌好物,海淘折扣,介绍使用经验和体验测评,推荐新奇有趣礼物,送男女朋友父母长辈,介绍全球美食和旅游攻略,分类页提供家具品牌,生活用品,电器,办公文具,时尚单品,化妆品,护理保湿,数码产品,母婴用品和户外装备的品牌,价格,评测信息">
 </head>
@@ -110,7 +110,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="about-us-area2 f-l">
       <h2>下载APP</h2>
-      <img src="http://www.diaox2.com/images/download_96.jpg" alt="" width="100" height="100">
+      <img src="//www.diaox2.com/images/download_96.jpg" alt="" width="100" height="100">
     </div>
     <div class="share-area f-r">
      <ul class="clearfix">
