--- a/dd/zdm.html
+++ b/dd/zdm.html
@@ -9,7 +9,7 @@
 <link rel="dns-prefetch" href="//search.image.alimmdn.com">
 <link rel="dns-prefetch" href="//api.diaox2.com">
 <link rel="dns-prefetch" href="//c.diaox2.com">
-<link rel="icon" href="http://a.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon">
+<link rel="icon" href="//a.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon">
 <meta name=description content="有调DIAOX2.COM,讲述精致生活,推荐品质好物。找到最值得买的品牌好物,海淘折扣,介绍使用经验和体验测评,推荐新奇有趣礼物,送男女朋友父母长辈,介绍全球美食和旅游攻略,分类页提供家具品牌,生活用品,电器,办公文具,时尚单品,化妆品,护理保湿,数码产品,母婴用品和户外装备的品牌,价格,评测信息">
 <meta name="keywords" content="有调,DIAOX2.COM,品质生活方式,值得买,推荐礼物,海淘折扣,使用经验,评测,测评,旅游攻略,吃喝指南,家具,生活用品,家用电器,办公文具,时尚单品,护理保湿,数码产品,母婴用品,户外装备">
 <link rel="stylesheet" type="text/css" href="css/zdm.css">
@@ -88,7 +88,7 @@ var _hmt = _hmt||[];(function() {var hm = document.createElement("script");hm.sr
                             <ul class="hot-list clearfix" id="hot-list"></ul>
                         </div>
                     </div>
-                    <a target="_blank" href="http://www.diaox2.com/download.html" class="erweima">
+                    <a target="_blank" href="//www.diaox2.com/download.html" class="erweima">
                         <span>
                             更多精彩
                             <br>下载APP</span>
