--- a/dd/download.html
+++ b/dd/download.html
@@ -13,13 +13,13 @@
 <meta name="keywords" content="调调,DIAOX2.COM,品质生活方式,值得买,推荐礼物,海淘折扣,使用经验,评测,测评,旅游攻略,吃喝指南,家具,生活用品,家用电器,办公文具,时尚单品,护理保湿,数码产品,母婴用品,户外装备">
 <meta name="description" content="调调DIAOX2.COM,讲述精致生活,推荐品质好物。找到最值得买的品牌好物,海淘折扣,介绍使用经验和体验测评,推荐新奇有趣礼物,送男女朋友父母长辈,介绍全球美食和旅游攻略,分类页提供家具品牌,生活用品,电器,办公文具,时尚单品,化妆品,护理保湿,数码产品,母婴用品和户外装备的品牌,价格,评测信息">
 <link rel="stylesheet" href="css/download.css" type="text/css" />
-<script src="http://www.diaox2.com/js/check.min.js"></script>
-<script src="http://www.diaox2.com/js/wx.js"></script>
-<script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="http://www.diaox2.com/js/jump.js"></script>
-<script src="http://www.diaox2.com/js/jquery.cycle2.min.js"></script>
-<script src="http://www.diaox2.com/js/waypoints.min.js"></script>
-<link rel="icon" href="http://c.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon" />
+<script src="//www.diaox2.com/js/check.min.js"></script>
+<script src="//www.diaox2.com/js/wx.js"></script>
+<script src="//apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="//www.diaox2.com/js/jump.js"></script>
+<script src="//www.diaox2.com/js/jquery.cycle2.min.js"></script>
+<script src="//www.diaox2.com/js/waypoints.min.js"></script>
+<link rel="icon" href="//c.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon" />
 <title>调调，高品质生活指南</title>
 </head>
 <body id="1413706967">
@@ -57,9 +57,9 @@
     <div class="head">
         <div class="message">
         <div id="logo"></div>
-        <div id="apple"><a href="appstore.html"><img src="http://www.diaox2.com/images/appstore.png" /></a></div>
-        <div id="android"><a href="http://bin-10005270.file.myqcloud.com/apk/Diaodiao_gw.apk"><img src="http://www.diaox2.com/images/androidpc.png" /></a></div>
-        <div id="barcode"><img src="http://www.diaox2.com/images/liantu.png" /></div>
+        <div id="apple"><a href="appstore.html"><img src="//www.diaox2.com/images/appstore.png" /></a></div>
+        <div id="android"><a href="http://bin-10005270.file.myqcloud.com/apk/Diaodiao_gw.apk"><img src="//www.diaox2.com/images/androidpc.png" /></a></div>
+        <div id="barcode"><img src="//www.diaox2.com/images/liantu.png" /></div>
         <div id="swipe">
             <div class="cycle-slideshow"
                 data-cycle-swipe=true data-fx=scrollHorz
@@ -141,5 +141,5 @@
 </div>
 <script>var _hmt = _hmt||[];(function() {var hm = document.createElement("script");hm.src = "//hm.baidu.com/hm.js?a3e886fbe5e5db18814a35ef70f81457";var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s);})();</script>
 </body>
-<script src="http://www.diaox2.com/js/dnld_ani.js"></script>
+<script src="//www.diaox2.com/js/dnld_ani.js"></script>
 </html>
