--- a/dd/s-result.html
+++ b/dd/s-result.html
@@ -5,7 +5,7 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 <meta name="renderer" content="webkit|ie-stand">
-<link rel="icon" href="http://a.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon">
+<link rel="icon" href="//a.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon">
 <meta name=description content="调调DIAOX2.COM,讲述精致生活,推荐品质好物。找到最值得买的品牌好物,海淘折扣,介绍使用经验和体验测评,推荐新奇有趣礼物,送男女朋友父母长辈,介绍全球美食和旅游攻略,分类页提供家具品牌,生活用品,电器,办公文具,时尚单品,化妆品,护理保湿,数码产品,母婴用品和户外装备的品牌,价格,评测信息">
 <meta name="keywords" content="调调,DIAOX2.COM,品质生活方式,值得买,推荐礼物,海淘折扣,使用经验,评测,测评,旅游攻略,吃喝指南,家具,生活用品,家用电器,办公文具,时尚单品,护理保湿,数码产品,母婴用品,户外装备">
 <link rel="stylesheet" type="text/css" href="css/s-result.css">
@@ -48,7 +48,7 @@ function adjust(img){
             <li class="category present f-l"><a href="s-result.html?q=礼物">礼物</a></li>
             <li class="down-app f-l">
             <i class="header-app-icon"></i>
-            <a href="http://www.diaox2.com/download.html" target="_blank">下载APP</a></li>    
+            <a href="//www.diaox2.com/download.html" target="_blank">下载APP</a></li>    
         </ul>
         <ul class="login f-r">
             <li class="login-title f-l"><a href="#">登录</a></li>
@@ -162,7 +162,7 @@ function adjust(img){
         <div class="hot-topics-area f-l">
             <h2 class="hot-topics"><img src="images/hot-topics.png">热门专题</h2>
             <ul class="special" id="special"></ul>
-      <a target="_blank" href="http://www.diaox2.com/download.html" class="erweima">
+      <a target="_blank" href="//www.diaox2.com/download.html" class="erweima">
         <span>更多精彩<br>下载APP</span>
         <img src="images/download_96.jpg" width="96" height="96" alt="扫码下载调调">
      </a>
